--- a/world-chain-builder/crates/world/payload/Cargo.toml
+++ b/world-chain-builder/crates/world/payload/Cargo.toml
@@ -29,6 +29,7 @@ reth-provider.workspace = true
 reth-primitives.workspace = true
 reth-transaction-pool.workspace = true
 reth-trie.workspace = true
+reth-payload-util.workspace = true
 
 # revm
 revm.workspace = true
